Ready to smoke test

--- a/aspectos_main.html
+++ b/aspectos_main.html
@@ -101,14 +101,11 @@
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Procesos de Scrum</div>
-          <div class="collapsible-body "><a href="">Inicio</a></div>
-          <div class="collapsible-body "><a href="">Planificación y estimación</a></div>
-          <div class="collapsible-body "><a href="">Implementación</a></div>
-          <div class="collapsible-body "><a href="">Revisión y retrospectiva</a></div>
-          <div class="collapsible-body "><a href="">Lanzamiento</a></div>
-        </li>
-      </ul>
-
+          <div class="collapsible-body"><a href="fs_inicio.html">Fase de inicio</a></div>
+          <div class="collapsible-body"><a href="fs_planificar.html">Fase de planificación y estimación</a></div>
+          <div class="collapsible-body"><a href="fs_implementacion.html">Fase de implementación</a></div>
+          <div class="collapsible-body"><a href="fs_repaso.html">Fase de repaso y retrospectiva</a></div>
+          <div class="collapsible-body"><a href="fs_lanzamiento.html">Fase de lanzamiento</a></div>
     </ul>
   </div>
   <!--/Menu slide  -->
