--- a/fs_inicio.html
+++ b/fs_inicio.html
@@ -48,8 +48,14 @@
     </nav>
   </div>
 
+  <!-- Botón Home -->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large waves-effect waves-light teal darken-3 z-depth-5 tooltipped" data-position="top" data-delay="50" data-tooltip="Home" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+  </div>
+  <!--/Botón Home  -->
 
-  <!-- Menú slide -->
+ 
+   <!-- Menú slide -->
   <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
       <h3>Scrum</h3>
@@ -105,132 +111,73 @@
   </div>
   <!--/Menu slide  -->
 
-  <!-- Primer Banner -->
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text blue-grey-text text-lighten-5"></h1>
-        <br><br>
-      </div>
+  <div class="row">
+    <div class="col-md-12 center-align">
+      <h1 class="section_title">
+        Fase de inicio
+      </h1>
     </div>
-    <div class="parallax"><img src="img/main_banner.png" alt="Unsplashed background img 1"></div>
-  </div>
+  </div> 
 
-  <!-- Sección de tarjetas -->
   <div class="container">
-    <div class="section">
-      <div class="row">
-      <ul id="card_list">
+    <div class="row">
+      <div class="col s12">
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/1.jpg">
-              <span class="card-title">Glosario de Términos</span>
-            </div>
-            <div class="card-content">
-              <p>Lo escencial que debes conocer</p>
-            </div>
-            <div class="card-action">
-              <a href="glosario.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/2.jpeg">
-              <span class="card-title">Historia</span>
-            </div>
-            <div class="card-content">
-              <p>Todo en una  breve línea del tiempo</p>
-            </div>
-            <div class="card-action">
-              <a href="historia.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/3.jpeg">
-              <span class="card-title">Conceptos Generales</span>
-            </div>
-            <div class="card-content">
-              <p>Los elementos más importantes de Scrum</p>
-            </div>
-            <div class="card-action">
-              <a href="./conceptos.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/4.jpeg">
-              <span class="card-title">Principios</span>
-            </div>
-            <div class="card-content">
-              <p>Conoce las partes más importantes del desarrollo iterativo</p>
-            </div>
-            <div class="card-action">
-              <a href="principios_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/5.jpg" alt="Scrum">
-              <span class="card-title">Aspectos</span>
-            </div>
-            <div class="card-content">
-              <p>Características de la metodología</p>
-            </div>
-            <div class="card-action">
-              <a href="aspectos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/6.jpg">
-              <span class="card-title">Procesos</span>
-            </div>
-            <div class="card-content">
-              <p>Explora cada parte de los procesos</p>
-            </div>
-            <div class="card-action">
-              <a href="procesos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
+        <table>
+          
+          <tr>
+            <td class="tbl_head indigo yellow accent-4">Proceso 1</td>
+            <td class="grey lighten-2">
+              <p>Crear la visión del proyecto:</p>
+              <li>Se plasma la inspiración y el enfoque para el resto del proyecto.</li>
+              <li>También se identifica al propietario del producto.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head indigo indigo lighten-2">Proceso 2</td>
+            <td class="grey lighten-5">El Scrum Master y el Stakeholder se identifican utilizando criterios específicos de la selección.</td>
+          </tr>          
+          <tr>
+            <td class="tbl_head indigo yellow accent-4">Proceso 3</td>
+            <td class="grey lighten-2">Formar el equipo Scrum: <br>El propietario del producto es quien selecciona losmiembros del equipo, en ocasiones el Scrum Master colabora en este proceso.</td>
+          </tr>          
+          <tr>
+            <td class="tbl_head indigo indigo lighten-2">Proceso 4</td>
+            <td class="grey lighten-5">
+              <p>Desarrollo de épicas:</p>
+              <li>La base para este proceso es la declaración de la visión del proyecto.</li>
+              <li>Las épicas son grandes historias de usuario sin refinar.</li>
+              <li>El levantamiento de historias se hace en reuniones de grupo de usuarios.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head indigo yellow accent-4">Proceso 5</td>
+            <td class="grey lighten-2">
+              <p>Se refinan las épicas y elaboradas.</p>
+              <li>Se priorizan las historias y se crea la lista del producto del proyecto.</li>
+              <li>Se establecen los criterios de terminado de cada historia.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head indigo indigo lighten-2">Proceso 6</td>
+            <td class="grey lighten-5">
+              <p>Planificación de Release:</p>
+              <li>El equipo principal de Scrum revisa las historias de usuario en la priorización de la lista del producto.
+              </li>
+              <li>Se desarrolla el cronograma de planificación del lanzamiento que es el programa de implementación por fases donde se da a conocer los avances con los interesados delproyecto.
+              </li>
+            </td>
+          </tr>
 
 
-      </ul>
+        </table>
 
       </div>
     </div>
   </div>
+
+
+
 
   <!-- Footer -->
   <footer class="page-footer">
@@ -254,10 +201,9 @@
   <!--/Footer -->
 
 
-
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/init.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
+    <script src="js/init.js"></script>
+  </body>
 </html>
