--- a/fs_lanzamiento.html
+++ b/fs_lanzamiento.html
@@ -48,8 +48,14 @@
     </nav>
   </div>
 
+  <!-- Botón Home -->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large waves-effect waves-light teal darken-3 z-depth-5 tooltipped" data-position="top" data-delay="50" data-tooltip="Home" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+  </div>
+  <!--/Botón Home  -->
 
-  <!-- Menú slide -->
+ 
+   <!-- Menú slide -->
   <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
       <h3>Scrum</h3>
@@ -103,134 +109,47 @@
           <div class="collapsible-body"><a href="fs_lanzamiento.html">Fase de lanzamiento</a></div>
     </ul>
   </div>
-  <!--/Menu slide  -->
+  <!--/Menu slide  --> 
 
-  <!-- Primer Banner -->
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text blue-grey-text text-lighten-5"></h1>
-        <br><br>
-      </div>
+  <div class="row">
+    <div class="col-md-12 center-align">
+      <h1 class="section_title">
+        Fase de lanzamiento
+      </h1>
     </div>
-    <div class="parallax"><img src="img/main_banner.png" alt="Unsplashed background img 1"></div>
-  </div>
+  </div> 
 
-  <!-- Sección de tarjetas -->
+
   <div class="container">
-    <div class="section">
-      <div class="row">
-      <ul id="card_list">
+    <div class="row">
+      <div class="col s12">
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/1.jpg">
-              <span class="card-title">Glosario de Términos</span>
-            </div>
-            <div class="card-content">
-              <p>Lo escencial que debes conocer</p>
-            </div>
-            <div class="card-action">
-              <a href="glosario.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/2.jpeg">
-              <span class="card-title">Historia</span>
-            </div>
-            <div class="card-content">
-              <p>Todo en una  breve línea del tiempo</p>
-            </div>
-            <div class="card-action">
-              <a href="historia.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/3.jpeg">
-              <span class="card-title">Conceptos Generales</span>
-            </div>
-            <div class="card-content">
-              <p>Los elementos más importantes de Scrum</p>
-            </div>
-            <div class="card-action">
-              <a href="./conceptos.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/4.jpeg">
-              <span class="card-title">Principios</span>
-            </div>
-            <div class="card-content">
-              <p>Conoce las partes más importantes del desarrollo iterativo</p>
-            </div>
-            <div class="card-action">
-              <a href="principios_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/5.jpg" alt="Scrum">
-              <span class="card-title">Aspectos</span>
-            </div>
-            <div class="card-content">
-              <p>Características de la metodología</p>
-            </div>
-            <div class="card-action">
-              <a href="aspectos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/6.jpg">
-              <span class="card-title">Procesos</span>
-            </div>
-            <div class="card-content">
-              <p>Explora cada parte de los procesos</p>
-            </div>
-            <div class="card-action">
-              <a href="procesos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-
-      </ul>
+        <table>
+          
+          <tr>
+            <td class="tbl_head deep-purple darken-1">Proceso 18</td>
+            <td class="grey lighten-2">
+              <p>Envío de los entregables:</p>
+              <li>Se comparte los entregables con las partes interesadas por medio del acuerdo de entregables funcionales de la finalización exitosa del Sprint.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head blue">Proceso 19</td>
+            <td class="grey lighten-5">
+              <p>Retrospectiva del proyecto:</p>
+              <li>Se concluye el proyecto.</li>
+              <li>Se reúnen los miembros principales del equipo Scrum con todas las partes interesadas para hacer una retrospectiva del proyecto e identificar, documentar e internalizar las lecciones aprendidas.</li>
+              <li>A veces las lecciones llevan a la documentación de mejoras acordadas susceptibles a la acción, las cuales se podrán aplicar a futuros proyectos.</li>
+            </td>
+          </tr>   
+        </table>
 
       </div>
     </div>
   </div>
+
+
+
 
   <!-- Footer -->
   <footer class="page-footer">
@@ -254,10 +173,9 @@
   <!--/Footer -->
 
 
-
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/init.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
+    <script src="js/init.js"></script>
+  </body>
 </html>
