--- a/procesos_main.html
+++ b/procesos_main.html
@@ -55,7 +55,7 @@
   <!--/Botón Home  -->
 
   <!-- Menú slide -->
-  <div> 
+  <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
       <h3>Scrum</h3>
 
@@ -97,21 +97,18 @@
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
       </ul>
-      
+
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Procesos de Scrum</div>
-          <div class="collapsible-body "><a href="">Inicio</a></div>
-          <div class="collapsible-body "><a href="">Planificación y estimación</a></div>
-          <div class="collapsible-body "><a href="">Implementación</a></div>
-          <div class="collapsible-body "><a href="">Revisión y retrospectiva</a></div>
-          <div class="collapsible-body "><a href="">Lanzamiento</a></div>
-        </li>
-      </ul>
-
+          <div class="collapsible-body"><a href="fs_inicio.html">Fase de inicio</a></div>
+          <div class="collapsible-body"><a href="fs_planificar.html">Fase de planificación y estimación</a></div>
+          <div class="collapsible-body"><a href="fs_implementacion.html">Fase de implementación</a></div>
+          <div class="collapsible-body"><a href="fs_repaso.html">Fase de repaso y retrospectiva</a></div>
+          <div class="collapsible-body"><a href="fs_lanzamiento.html">Fase de lanzamiento</a></div>
     </ul>
   </div>
-  <!--/Menu slide  -->  
+  <!--/Menu slide  -->
 
   <!-- Título -->
   <div class="row">
@@ -138,7 +135,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="proc_inicio.html">Entrar</a>
+              <a href="fs_inicio.html">Entrar</a>
             </div>
           </div>
         </div>
@@ -153,7 +150,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="">Entrar</a>
+              <a href="fs_planificar.html">Entrar</a>
             </div>
           </div>
         </div>
@@ -168,7 +165,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="">Entrar</a>
+              <a href="fs_implementacion.html">Entrar</a>
             </div>
           </div>
         </div>
@@ -183,7 +180,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="">Entrar</a>
+              <a href="fs_repaso.html">Entrar</a>
             </div>
           </div>
         </div>
@@ -198,7 +195,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="">Entrar</a>
+              <a href="fs_lanzamiento.html">Entrar</a>
             </div>
           </div>
         </div>
