--- a/fs_implementacion.html
+++ b/fs_implementacion.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -48,7 +48,13 @@
     </nav>
   </div>
 
+  <!-- Botón Home -->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large waves-effect waves-light teal darken-3 z-depth-5 tooltipped" data-position="top" data-delay="50" data-tooltip="Home" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+  </div>
+  <!--/Botón Home  -->
 
+ 
   <!-- Menú slide -->
   <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
@@ -103,134 +109,55 @@
           <div class="collapsible-body"><a href="fs_lanzamiento.html">Fase de lanzamiento</a></div>
     </ul>
   </div>
-  <!--/Menu slide  -->
+  <!--/Menu slide  -->  
 
-  <!-- Primer Banner -->
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text blue-grey-text text-lighten-5"></h1>
-        <br><br>
-      </div>
+  <div class="row">
+    <div class="col-md-12 center-align">
+      <h1 class="section_title">
+        Fase de implementación
+      </h1>
     </div>
-    <div class="parallax"><img src="img/main_banner.png" alt="Unsplashed background img 1"></div>
-  </div>
+  </div> 
 
-  <!-- Sección de tarjetas -->
   <div class="container">
-    <div class="section">
-      <div class="row">
-      <ul id="card_list">
+    <div class="row">
+      <div class="col s12">
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/1.jpg">
-              <span class="card-title">Glosario de Términos</span>
-            </div>
-            <div class="card-content">
-              <p>Lo escencial que debes conocer</p>
-            </div>
-            <div class="card-action">
-              <a href="glosario.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
+        <table>
+          
+          <tr>
+            <td class="tbl_head light-green">Proceso 12</td>
+            <td class="grey lighten-2">
+              <p>Crear entregables:</p>
+              <li>El equipo trabaja en las tareas pendientes del Sprint.</li>
+              <li>Se utiliza la tabla de Scrum para el seguimiento del trabajo.</li>
+              <li>Se usa registros de impedimentos para colocar los problemas que enfrente el equipo Scrum.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head indigo lighten-4 ">Proceso 13</td>
+            <td class="grey lighten-5">
+              <p>Realizar un standup diario:</p>
+              <li>Reunión diaria enfocada en puntos importantes y de duración con limite de tiempo, en la cual 
+              los miembros del equipo muestran sus progresos diarios.
+            </li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head light-green">Proceso 14</td>
+            <td class="grey lighten-2">
+              <p>Mantenimiento de los pendientes del producto:</p>
+              <li>La lista de prioridades del producto se debe actualizar continuamente.</li>
+            </td>
+          </tr>
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/2.jpeg">
-              <span class="card-title">Historia</span>
-            </div>
-            <div class="card-content">
-              <p>Todo en una  breve línea del tiempo</p>
-            </div>
-            <div class="card-action">
-              <a href="historia.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/3.jpeg">
-              <span class="card-title">Conceptos Generales</span>
-            </div>
-            <div class="card-content">
-              <p>Los elementos más importantes de Scrum</p>
-            </div>
-            <div class="card-action">
-              <a href="./conceptos.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/4.jpeg">
-              <span class="card-title">Principios</span>
-            </div>
-            <div class="card-content">
-              <p>Conoce las partes más importantes del desarrollo iterativo</p>
-            </div>
-            <div class="card-action">
-              <a href="principios_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/5.jpg" alt="Scrum">
-              <span class="card-title">Aspectos</span>
-            </div>
-            <div class="card-content">
-              <p>Características de la metodología</p>
-            </div>
-            <div class="card-action">
-              <a href="aspectos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/6.jpg">
-              <span class="card-title">Procesos</span>
-            </div>
-            <div class="card-content">
-              <p>Explora cada parte de los procesos</p>
-            </div>
-            <div class="card-action">
-              <a href="procesos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-
-      </ul>
+        </table>
 
       </div>
     </div>
   </div>
+
+
 
   <!-- Footer -->
   <footer class="page-footer">
@@ -254,10 +181,9 @@
   <!--/Footer -->
 
 
-
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/init.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
+    <script src="js/init.js"></script>
+  </body>
 </html>
