--- a/fs_planificar.html
+++ b/fs_planificar.html
@@ -48,7 +48,13 @@
     </nav>
   </div>
 
+  <!-- Botón Home -->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large waves-effect waves-light teal darken-3 z-depth-5 tooltipped" data-position="top" data-delay="50" data-tooltip="Home" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+  </div>
+  <!--/Botón Home  -->
 
+ 
   <!-- Menú slide -->
   <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
@@ -103,134 +109,69 @@
           <div class="collapsible-body"><a href="fs_lanzamiento.html">Fase de lanzamiento</a></div>
     </ul>
   </div>
-  <!--/Menu slide  -->
+  <!--/Menu slide  --> 
 
-  <!-- Primer Banner -->
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text blue-grey-text text-lighten-5"></h1>
-        <br><br>
-      </div>
+  <div class="row">
+    <div class="col-md-12 center-align">
+      <h1 class="section_title">
+        Fase de planificación y estimación
+      </h1>
     </div>
-    <div class="parallax"><img src="img/main_banner.png" alt="Unsplashed background img 1"></div>
-  </div>
+  </div> 
 
-  <!-- Sección de tarjetas -->
+
   <div class="container">
-    <div class="section">
-      <div class="row">
-      <ul id="card_list">
+    <div class="row">
+      <div class="col s12">
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/1.jpg">
-              <span class="card-title">Glosario de Términos</span>
-            </div>
-            <div class="card-content">
-              <p>Lo escencial que debes conocer</p>
-            </div>
-            <div class="card-action">
-              <a href="glosario.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
+        <table>
+          
+          <tr>
+            <td class="tbl_head light-blue">Proceso 7</td>
+            <td class="grey lighten-2">
+              <p>Crear historias de usuario:</p>
+              <li>Se crean las historias y los criterios de aceptación de las mismas.</li>
+              <li>Son escritas por el propietario del producto.</li>
+              <li>Aseguran la claridad de los requisitos del cliente.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head pink darken-1">Proceso 8</td>
+            <td class="grey lighten-5">
+              <p>Aprobar, estimar y comprometerse a las historias de usuario:</p>
+              <li>El propietario del producto aprueba las historias de usuario para un Sprint.</li>
+              <li>El Scrum Master y el equipo Scrum estiman el esfuerzo necesario para desarrollar la funcionalidad descrita en cada historia.</li>
+              <li>El equipo Scrum se compromete a desarrollar las historias de usuario aprobadas, estimadas y comprometidas.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head light-blue">Proceso 9</td>
+            <td class="grey lighten-2">
+              <p>Crear tareas:</p>
+              <li>Las historias aprobadas, estimadas y comprometidas se dividen en tareas específicas y se compilas en la lista de tareas.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head pink darken-1">Proceso 10</td>
+            <td class="grey lighten-2">
+              <p>Estimación de tareas:</p>
+              <li>Se realiza un taller de estimación de tareas, en este taller se estima el esfuerzo para realizar cada tarea de la lista.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head light-blue">Proceso 11</td>
+            <td class="grey lighten-2">
+              <p>Crear la lista de pendientes del Sprint:</p>
+              <li>Se lleva a cabo reuniones de planificación de Sprint, en dichas reuniones el equipo Scrumcrea pendientes del sprint que contienen todas las tareas que deben completarse en el sprint.</li>
+            </td>
+          </tr>
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/2.jpeg">
-              <span class="card-title">Historia</span>
-            </div>
-            <div class="card-content">
-              <p>Todo en una  breve línea del tiempo</p>
-            </div>
-            <div class="card-action">
-              <a href="historia.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/3.jpeg">
-              <span class="card-title">Conceptos Generales</span>
-            </div>
-            <div class="card-content">
-              <p>Los elementos más importantes de Scrum</p>
-            </div>
-            <div class="card-action">
-              <a href="./conceptos.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/4.jpeg">
-              <span class="card-title">Principios</span>
-            </div>
-            <div class="card-content">
-              <p>Conoce las partes más importantes del desarrollo iterativo</p>
-            </div>
-            <div class="card-action">
-              <a href="principios_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/5.jpg" alt="Scrum">
-              <span class="card-title">Aspectos</span>
-            </div>
-            <div class="card-content">
-              <p>Características de la metodología</p>
-            </div>
-            <div class="card-action">
-              <a href="aspectos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/6.jpg">
-              <span class="card-title">Procesos</span>
-            </div>
-            <div class="card-content">
-              <p>Explora cada parte de los procesos</p>
-            </div>
-            <div class="card-action">
-              <a href="procesos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-
-      </ul>
+        </table>
 
       </div>
     </div>
   </div>
+
 
   <!-- Footer -->
   <footer class="page-footer">
@@ -254,10 +195,9 @@
   <!--/Footer -->
 
 
-
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/init.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
+    <script src="js/init.js"></script>
+  </body>
 </html>
