--- a/fs_repaso.html
+++ b/fs_repaso.html
@@ -48,8 +48,14 @@
     </nav>
   </div>
 
+  <!-- Botón Home -->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large waves-effect waves-light teal darken-3 z-depth-5 tooltipped" data-position="top" data-delay="50" data-tooltip="Home" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+  </div>
+  <!--/Botón Home  -->
 
-  <!-- Menú slide -->
+ 
+   <!-- Menú slide -->
   <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
       <h3>Scrum</h3>
@@ -105,132 +111,54 @@
   </div>
   <!--/Menu slide  -->
 
-  <!-- Primer Banner -->
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text blue-grey-text text-lighten-5"></h1>
-        <br><br>
-      </div>
+  <div class="row">
+    <div class="col-md-12 center-align">
+      <h1 class="section_title">
+        Fase de repaso y retrospectiva
+      </h1>
     </div>
-    <div class="parallax"><img src="img/main_banner.png" alt="Unsplashed background img 1"></div>
-  </div>
+  </div> 
 
-  <!-- Sección de tarjetas -->
+
   <div class="container">
-    <div class="section">
-      <div class="row">
-      <ul id="card_list">
+    <div class="row">
+      <div class="col s12">
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/1.jpg">
-              <span class="card-title">Glosario de Términos</span>
-            </div>
-            <div class="card-content">
-              <p>Lo escencial que debes conocer</p>
-            </div>
-            <div class="card-action">
-              <a href="glosario.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
+        <table>
+          
+          <tr>
+            <td class="tbl_head amber darken-1">Proceso 15</td>
+            <td class="grey lighten-2">
+              <p>Convocar Scrum de Scrums:</p>
+              <li>Los representantes de cada equipo Scrum convocan la reunión en intervalos de tiempo a consideración según las necesidades del proyecto para realizar seguimiento del progreso.</li>
+              <li>Esta actividad se realiza cuando el proyecto es muy grande y tiene mas de un equipo Scrum.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head green lighten-4">Proceso 16</td>
+            <td class="grey lighten-5">
+              <p>Demostrar y validar el Sprint:</p>
+              <li>El equipo Scrum muestra los entregables del Sprint al propietario del producto y a los interesados relevantes durante la reunión de revisión del sprint.</li>
+              <li>El propósito de la reunión de revisión del sprint es asegurar la aprobación y aceptación por parte del propietario del producto.</li>
+            </td>
+          </tr>          
+          <tr>
+            <td class="tbl_head amber darken-1">Proceso 17</td>
+            <td class="grey lighten-2">
+              <p>Retrospectiva del Sprint:</p>
+              <li>El Scrum master y el equipo Scrum se reúnen para discutir las lecciones aprendidas durante el Sprint.</li>
+              <li>Las lecciones aprendidas se documentan como aprendizaje que se puede aplicar a los futuros sprints, esto implica mejoras en los sprints futuros.</li>
+            </td>
+          </tr>
 
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/2.jpeg">
-              <span class="card-title">Historia</span>
-            </div>
-            <div class="card-content">
-              <p>Todo en una  breve línea del tiempo</p>
-            </div>
-            <div class="card-action">
-              <a href="historia.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/3.jpeg">
-              <span class="card-title">Conceptos Generales</span>
-            </div>
-            <div class="card-content">
-              <p>Los elementos más importantes de Scrum</p>
-            </div>
-            <div class="card-action">
-              <a href="./conceptos.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/4.jpeg">
-              <span class="card-title">Principios</span>
-            </div>
-            <div class="card-content">
-              <p>Conoce las partes más importantes del desarrollo iterativo</p>
-            </div>
-            <div class="card-action">
-              <a href="principios_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/5.jpg" alt="Scrum">
-              <span class="card-title">Aspectos</span>
-            </div>
-            <div class="card-content">
-              <p>Características de la metodología</p>
-            </div>
-            <div class="card-action">
-              <a href="aspectos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-        <li>
-        <div class="col m6">
-          <div class="card center-align hoverable">
-            <div class="card-image">
-              <img src="img/6.jpg">
-              <span class="card-title">Procesos</span>
-            </div>
-            <div class="card-content">
-              <p>Explora cada parte de los procesos</p>
-            </div>
-            <div class="card-action">
-              <a href="procesos_main.html">Entrar</a>
-            </div>
-          </div>
-        </div>
-        </li>
-
-
-      </ul>
+        </table>
 
       </div>
     </div>
   </div>
+
+
+
 
   <!-- Footer -->
   <footer class="page-footer">
@@ -254,10 +182,9 @@
   <!--/Footer -->
 
 
-
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
-  <script src="js/init.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
+    <script src="js/init.js"></script>
+  </body>
 </html>
