--- a/principios_main.html
+++ b/principios_main.html
@@ -55,12 +55,8 @@
   <!--/Botón Home  -->
 
 
-<<<<<<< HEAD
- 
-=======
->>>>>>> 306dfb559697b11c6034c6d6876df5b536bd06e5
-  <!-- Menú slide -->
-  <div> 
+   <!-- Menú slide -->
+  <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
       <h3>Scrum</h3>
 
@@ -102,47 +98,18 @@
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
       </ul>
-<<<<<<< HEAD
 
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Procesos de Scrum</div>
-          <div class="collapsible-body "><a href="">Creación de la visión del proyecto</a></div>
-          <div class="collapsible-body "><a href="">Identificación del Scrum Master y socios</a></div>
-          <div class="collapsible-body "><a href="">Formación de equipos</a></div>
-          <div class="collapsible-body "><a href="">Desarrollo de épicas</a></div>
-          <div class="collapsible-body "><a href="">Creación de lista priorizada de clientes</a></div>
-          <div class="collapsible-body "><a href="">Planificación de lanzamiento</a></div>
-          <div class="collapsible-body "><a href="">Creación de historias de usuario</a></div>
-          <div class="collapsible-body "><a href="">Aprobación y asignación de US</a></div>
-          <div class="collapsible-body "><a href="">Creación de tareas</a></div>
-          <div class="collapsible-body "><a href="">Estimación de tareas</a></div>
-          <div class="collapsible-body "><a href="">Creación de lista de pendientes del Sprint</a></div>
-          <div class="collapsible-body "><a href="">Creación de entregables</a></div>
-          <div class="collapsible-body "><a href="">Reuniones diarias</a></div>
-          <div class="collapsible-body "><a href="">Mantenimiento de lista priorizada de pendientes</a></div>
-          <div class="collapsible-body "><a href="">Convocatoria Scrum de Scrums</a></div>
-          <div class="collapsible-body "><a href="">Demostración y validación del sprint</a></div>
-          <div class="collapsible-body "><a href="">Retrospectiva del sprint</a></div>
-          <div class="collapsible-body "><a href="">Envío de entregables</a></div>
-          <div class="collapsible-body "><a href="">Retrospectiva del proyecto</a></div>
-=======
-      
-      <ul class="collapsible" data-collapsible="accordion">
-        <li>
-          <div class="collapsible-header waves-effect waves-light">Procesos de Scrum</div>
-          <div class="collapsible-body "><a href="">Inicio</a></div>
-          <div class="collapsible-body "><a href="">Planificación y estimación</a></div>
-          <div class="collapsible-body "><a href="">Implementación</a></div>
-          <div class="collapsible-body "><a href="">Revisión y retrospectiva</a></div>
-          <div class="collapsible-body "><a href="">Lanzamiento</a></div>
-        </li>
->>>>>>> 306dfb559697b11c6034c6d6876df5b536bd06e5
-      </ul>
-
+          <div class="collapsible-body"><a href="fs_inicio.html">Fase de inicio</a></div>
+          <div class="collapsible-body"><a href="fs_planificar.html">Fase de planificación y estimación</a></div>
+          <div class="collapsible-body"><a href="fs_implementacion.html">Fase de implementación</a></div>
+          <div class="collapsible-body"><a href="fs_repaso.html">Fase de repaso y retrospectiva</a></div>
+          <div class="collapsible-body"><a href="fs_lanzamiento.html">Fase de lanzamiento</a></div>
     </ul>
   </div>
-  <!--/Menu slide  -->  
+  <!--/Menu slide  -->
 
     <!-- Título -->
   <div class="row">
