--- a/asp_organizacion.html
+++ b/asp_organizacion.html
@@ -92,8 +92,8 @@
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -143,7 +143,7 @@
 		  		<tr>
 		  			<td class=" light-green accent-1 rol">Propietario del producto</td>
 		  			<td class="grey lighten-2">
-		  				Representa al cliente final del producto, es su vozdentro de la interacción del proyecto.Existen en algunos casos Propietarios de Cartera yProgramas. <br>
+		  				Representa al cliente final del producto, es su voz dentro de la interacción del proyecto.Existen en algunos casos Propietarios de Cartera y Programas. <br>
 
 		  				<p>Características:</p> <br>
 
@@ -153,7 +153,7 @@
 		  				<li>Asegura los recursos financieros</li>
 		  				<li>Asegurar la entrega del producto.</li>
 		  				<br>
-		  				<a href="">Responsabilidades</a>
+		  				<a href="#responsabilidades">Responsabilidades</a>
 		  			</td>
 		  		</tr>
 
@@ -176,7 +176,7 @@
 		  				<li>Elimina los impedimentos que se presenten al
 							grupo durante los Sprint y en sí en todo el desarrollo del proyecto.</li>
 							<br>
-							<a href="">Responsabilidades</a>
+							<a href="#responsabilidades">Responsabilidades</a>
 		  			</td>
 		  		</tr>
 
@@ -266,7 +266,7 @@
 		  		El propietario del producto es quien se encarga de mantener la participación activa de los socios para lo cual debe realizar diferentes tareas como: Velar por que los socios colaboren efectivamente para ello debe estar en constante contacto con estos y abarcar sus sugerencias e inquietudes, así como también realizar evaluaciones de impacto en el negocio. El patrocinador es un socio clave ya que al ser quien provee los recursos para la realización del proyecto también espera los resultados finales de este y en especial sus resultados traducidos financieramente.
 		  	</p>
 		  	<br>
-		  	<p>Roles importantes para la gestión programas y  carteras del Scrum son:</p>
+		  	<p id="responsabilidades">Roles importantes para la gestión programas y  carteras del Scrum son:</p>
 		  	<br>
 		  	<img src="./img/resp_tbl.jpg">
 		  </div>
@@ -351,12 +351,11 @@
 		  		</tr>
 		  	</table>
 		  </div>
-
-		  <div class="col m12">
-				<img src="./img/resp_liderazgo.jpg" class="resp_liderazgo materialboxed">		  	
-		  </div>
-
 	  </div>
+  </div>
+
+	<div class="col m12">
+		<img src="./img/resp_liderazgo.jpg" class="resp_liderazgo">		  	
   </div>
 
 
