--- a/definicion.html
+++ b/definicion.html
@@ -88,13 +88,12 @@
         </li>
       </ul>
 
-
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -139,7 +138,7 @@
   			</p>
   			<img src="./img/def1.jpg" class="def_img">
   			<p class="def_text">
-  			Esta metodología se caracteriza por promover buenas prácticas para trabajar en un ambiente de responsabilidad colectiva en el cual los miembros del equipo de trabajo hacen parte activa en la realización de los entregables, basados en la comunicación clara y transparente acerca de los procesos que se vayan realizando en cada uno de los sptints del proyecto. Esta comunicación se realiza por medio de  reuniones muy cortas que se realizan diariamente para tratar temas muy concretos  lo cual  contribuye en la minimización de tiempos de resolución de inconvenientes y maximización  de la productividad del equipo para así obtener prontos resultados satisfactorios.
+  			Esta metodología se caracteriza por promover buenas prácticas para trabajar en un ambiente de responsabilidad colectiva en el cual los miembros del equipo de trabajo hacen parte activa en la realización de los entregables, basados en la comunicación clara y transparente acerca de los procesos que se vayan realizando en cada uno de los Sprints del proyecto. Esta comunicación se realiza por medio de  reuniones muy cortas que se realizan diariamente para tratar temas muy concretos  lo cual  contribuye en la minimización de tiempos de resolución de inconvenientes y maximización  de la productividad del equipo para así obtener prontos resultados satisfactorios.
   			</p>
   			<img src="./img/def.jpg" class="def_img">
   		</div>
