--- a/fases.html
+++ b/fases.html
@@ -92,8 +92,8 @@
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -205,7 +205,7 @@
   </div>
   <div id="modal2" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Identificación del Scrum Master y socio(s)</h4>
     </div>
     <div>
       <img src="./img/process/2.png" class="modal_img">
@@ -213,7 +213,7 @@
   </div>
   <div id="modal3" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Formación de equipos de Scrum</h4>
     </div>
     <div>
       <img src="./img/process/3.png" class="modal_img">
@@ -221,7 +221,7 @@
   </div>
   <div id="modal4" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Desarrollo de épica(s)</h4>
     </div>
     <div>
       <img src="./img/process/4.png" class="modal_img">
@@ -229,7 +229,7 @@
   </div>
   <div id="modal5" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Creación de la lista priorizada de pendientes</h4>
     </div>
     <div>
       <img src="./img/process/5.png" class="modal_img">
@@ -237,7 +237,7 @@
   </div>
   <div id="modal6" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Realizar la planificación de lanzamiento</h4>
     </div>
     <div>
       <img src="./img/process/6.png" class="modal_img">
@@ -245,7 +245,7 @@
   </div>
   <div id="modal7" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Creación de historias de usuario</h4>
     </div>
     <div>
       <img src="./img/process/7.png" class="modal_img">
@@ -253,7 +253,7 @@
   </div>
   <div id="modal8" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Aprobación, estimación y asignación de historias de usuario</h4>
     </div>
     <div>
       <img src="./img/process/8.png" class="modal_img">
@@ -261,7 +261,7 @@
   </div>
   <div id="modal9" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Creación de tareas</h4>
     </div>
     <div>
       <img src="./img/process/9.png" class="modal_img">
@@ -269,7 +269,7 @@
   </div>
   <div id="modal10" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Estimación de tareas</h4>
     </div>
     <div>
       <img src="./img/process/10.png" class="modal_img">
@@ -277,7 +277,7 @@
   </div>
   <div id="modal11" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Creación de la lista de pendientes del sprint</h4>
     </div>
     <div>
       <img src="./img/process/11.png" class="modal_img">
@@ -285,7 +285,7 @@
   </div>
   <div id="modal12" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Creación de entregables</h4>
     </div>
     <div>
       <img src="./img/process/12.png" class="modal_img">
@@ -293,7 +293,7 @@
   </div>
   <div id="modal13" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Llevar a cabo la reunión diaria</h4>
     </div>
     <div>
       <img src="./img/process/13.png" class="modal_img">
@@ -301,7 +301,7 @@
   </div>
   <div id="modal14" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Mantenimiento de la lista priorizada de pendientes</h4>
     </div>
     <div>
       <img src="./img/process/14.png" class="modal_img">
@@ -309,7 +309,7 @@
   </div>
   <div id="modal15" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Convocar el Scrum de Scrums</h4>
     </div>
     <div>
       <img src="./img/process/15.png" class="modal_img">
@@ -317,7 +317,7 @@
   </div>
   <div id="modal16" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Demostración y validación del sprint</h4>
     </div>
     <div>
       <img src="./img/process/16.png" class="modal_img">
@@ -325,7 +325,7 @@
   </div>
   <div id="modal17" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Retrospectiva del sprint</h4>
     </div>
     <div>
       <img src="./img/process/17.png" class="modal_img">
@@ -333,7 +333,7 @@
   </div>
   <div id="modal18" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Envío de entregables</h4>
     </div>
     <div>
       <img src="./img/process/18.png" class="modal_img">
@@ -341,7 +341,7 @@
   </div>
   <div id="modal19" class="modal modal-fixed-footer">
     <div class="modal-content">
-      <h4></h4>
+      <h4>Retrospectiva del proyecto</h4>
     </div>
     <div>
       <img src="./img/process/19.png" class="modal_img">
