--- a/pr_control.html
+++ b/pr_control.html
@@ -87,13 +87,12 @@
         </li>
       </ul>
 
-
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -111,15 +110,18 @@
   </div>
   <!--/Menu slide  --> 
 
-  <div class="row">
-    <div class="col-md-12 center-align">
-      <h1 class="section_title">
-        Control del proceso empírico
-      </h1>
-    </div>
-  </div> 
+  <div class="fluid-container def_title">
+    <div class="row">
+      <div class="col m12">
+        <h1>
+          Control del proceso empírico
+        </h1>
+        <div class="scroll-line"></div>
+      </div>
+    </div> 
+  </div>
 
-  <div class="container">
+  <div class="container info-top-space">
     <div class="row">
       <div class="col s12">
         <p>Ayuda en la toma de decisiones por medio de la observación  y la experimentación. El proceso empírico de Scrum se compone de tres factores: </p><br>
@@ -140,7 +142,7 @@
                    Tablero Scrum: permite una visibilidad clara del avance del equipo y lo que falta por realizar para lograr los objetivos del proyecto.
                  </li>
                  <li>
-                   Reuniones diarias: donde se informa acerca de avances desde el día anterior, la planificación para el dia actual y los inconvenientes diarios que puedan impactar el sprint.
+                   Reuniones diarias: donde se informa acerca de avances desde el día anterior, la planificación para el día actual y los inconvenientes diarios que puedan impactar el sprint.
                  </li>
                  <li>
                    Reuniones de revisión del Sprint: para validar el cumplimiento de objetivos durante todo el desarrollo del proyecto de la mano con el cliente y propietario(s) del producto.
