--- a/pr_desarrollo.html
+++ b/pr_desarrollo.html
@@ -87,13 +87,12 @@
         </li>
       </ul>
 
-
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -130,7 +129,7 @@
           La mayor fortaleza de este principio es que los miembros del equipo van aprendiendo y perfeccionando dentro de cada Sprint aquellas cosas que deben mejorar o mantener en el siguiente Sprint y así ir perfeccionando su labor hasta hacer casi nulo el número de errores en los últimos Sprints. <br>
           La idea de hacer uso de ésta metodología es debido a que es más flexible para acoplarse a los cambios que solicite el cliente cuando el proyecto ya esté en marcha, teniendo en cuenta que los cambios impactan directamente en las historias de usuario las cuales deben ser escritas constantemente a lo largo del proyecto pues estas historias describen funcionalidades, las historias de usuario que se catalogan como funcionalidades de alto nivel se conocen como épicas, dichas épicas generalmente son muy extensas para realizarse en un solo sprint por lo cual se dividen en historias de usuario más pequeñas, las cuales estàn incluidas en el mantenimiento de la lista priorizada de pendientes. <br>
           Por su parte el propietario del producto es quien se encarga de proveer la información necesaria para realizar el levantamiento de requisitos (Funcionalidades) con lo cual debe asegurar un mayor retorno sobre la inversión, se debe centrar en el valor  y en la entrega continua en cada uno de los sprints, también el propietario es el encargado de elegir los entregables contractuales y valores que se van a entregar en cada sprint. <br>
-          El Scrum  Master debe garantizar que los miembros sigan los procesos de la forma adecuada como lo indica la metodología Scrum, también es la persona que está pendiente de proveer lo necesario al equipo Scrum  para que éste logre su máxima productividad sin perder el principio de autoorganización con el que cuenta el equipo.
+          El Scrum  Master debe garantizar que los miembros sigan los procesos de la forma adecuada como lo indica la metodología Scrum, también es la persona que está pendiente de proveer lo necesario al equipo Scrum  para que éste logre su máxima productividad sin perder el principio de auto organización con el que cuenta el equipo.
         </p>
       </div>
     </div>
