--- a/pr_auto_org.html
+++ b/pr_auto_org.html
@@ -92,8 +92,8 @@
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -132,8 +132,6 @@
       </div>
     </div>
   </div>
-  <br><br><br><br><br><br><br><br>
-
 
   <!-- Footer -->
   <footer class="page-footer">
