--- a/pr_bloques.html
+++ b/pr_bloques.html
@@ -87,13 +87,12 @@
         </li>
       </ul>
 
-
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -111,15 +110,18 @@
   </div>
   <!--/Menu slide  --> 
 
-  <div class="row">
-    <div class="col-md-12 center-align">
-      <h1 class="section_title">
-        Asignación de bloques de tiempo
-      </h1>
-    </div>
-  </div> 
+    <div class="fluid-container def_title">
+    <div class="row">
+      <div class="col m12">
+        <h1>
+          Asignación de bloques de tiempo
+        </h1>
+        <div class="scroll-line"></div>
+      </div>
+    </div> 
+  </div>
 
-  <div class="container">
+  <div class="container info-top-space">
     <div class="row">
       <div class="col s12">
           <p>El tiempo en Scrum es una de las cuestiones más importantes en la gestión de un proyecto. Scrum introduce un nuevo concepto de  asignación de un bloque de tiempo o Time - Boxing; éste propone la fijación de una cierta cantidad de tiempo para cada proceso y actividad en un proyecto de Scrum. Esto ayudará para que los miembros del equipo no se ocupen demasiado o muy poco tiempo para una actividad determinada.</p><br>
