--- a/pr_colaboracion.html
+++ b/pr_colaboracion.html
@@ -86,14 +86,13 @@
           <div class="collapsible-body "><a href="pr_desarrollo.html">Desarrollo iterativo</a></div>
         </li>
       </ul>
-
-
+      
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -111,15 +110,19 @@
   </div>
   <!--/Menu slide  -->
 
-  <div class="row">
-    <div class="col-md-12 center-align">
-      <h1 class="section_title">
-        Colaboración
-      </h1>
-    </div>
-  </div> 
 
-  <div class="container">
+  <div class="fluid-container def_title">
+    <div class="row">
+      <div class="col m12">
+        <h1>
+          Colaboración
+        </h1>
+        <div class="scroll-line"></div>
+      </div>
+    </div> 
+  </div>
+
+  <div class="container info-top-space">
     <div class="row">
       <div class="col s12">
         <p>
@@ -146,7 +149,7 @@
 
       <div class="col s12">
         <p>Las dimensiones para un buen trabajo colaborativo son:</p>
-        <table class="dim-tbl">
+        <table>
           <tr>
             <td class="cyan lighten-2">Concienciación</td>
             <td class="indigo lighten-5">
