--- a/pr_priorizacion.html
+++ b/pr_priorizacion.html
@@ -87,13 +87,12 @@
         </li>
       </ul>
 
-
       <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header waves-effect waves-light">Aspectos de Scrum</div>
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
-          <div class="collapsible-body "><a href="">Justificación del negocio</a></div>
-          <div class="collapsible-body "><a href="">Calidad</a></div>
+          <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
+          <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
           <div class="collapsible-body "><a href="">Cambio</a></div>
           <div class="collapsible-body "><a href="">Riesgo</a></div>
         </li>
@@ -115,7 +114,7 @@
     <div class="row">
       <div class="col m12">
         <h1>
-        Priorización basada en valor
+          Priorización basada en valor
         </h1>
         <div class="scroll-line"></div>
       </div>
