--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>CertifícaTech</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Reem+Kufi" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="./materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="./app.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <script src="https://use.fontawesome.com/0550836500.js"></script>
