--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li>
 
 
-            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="material-icons"></i></a>
           </li>
         </ul>
       </div>
